--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .button {
+        @apply h-5 w-5 cursor-pointer
+    }
+
+    .pausePlayBtn {
+        @apply w-10 h-10 hover:scale-150 transform transition duration-150 ease-out cursor-pointer
+    }
+}
